further revisions to CMS, added finally reset to BufferedBlockCipher.